{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 32,
  "lineage": "06aa7659-e265-6dee-b921-fc7eca4c9d87",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "lb_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/adaptive-load-balancer-2/zones/us-central1-a/instanceGroups/lb-mig",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2025-04-08T18:54:33.540-07:00",
            "enable_cdn": false,
            "fingerprint": "wcduDPHuN1k=",
            "generated_id": 3486611414135106998,
            "health_checks": [
              "projects/adaptive-load-balancer-2/global/healthChecks/lb-health-check"
            ],
            "id": "projects/adaptive-load-balancer-2/global/backendServices/lb-backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "lb-backend-service",
            "port_name": "http",
            "project": "adaptive-load-balancer-2",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/adaptive-load-balancer-2/global/backendServices/lb-backend-service",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "dependencies": [
            "google_compute_health_check.lb_health_check",
            "google_compute_instance_group_manager.lb_mig",
            "google_compute_instance_template.lb_template"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http_5000",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "5000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-04-08T18:45:32.204-07:00",
            "deny": [],
            "description": "Allow HTTP traffic on port 5000",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/adaptive-load-balancer-2/global/firewalls/allow-http-5000",
            "log_config": [],
            "name": "allow-http-5000",
            "network": "https://www.googleapis.com/compute/v1/projects/adaptive-load-balancer-2/global/networks/default",
            "priority": 1000,
            "project": "adaptive-load-balancer-2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/adaptive-load-balancer-2/global/firewalls/allow-http-5000",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "http-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "lb_forwarding_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "forwarding_rule_id": 6229895223243730290,
            "id": "projects/adaptive-load-balancer-2/global/forwardingRules/lb-forwarding-rule",
            "ip_address": "34.128.128.251",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "lb-forwarding-rule",
            "network_tier": "PREMIUM",
            "port_range": "80-80",
            "project": "adaptive-load-balancer-2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/adaptive-load-balancer-2/global/forwardingRules/lb-forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/adaptive-load-balancer-2/global/targetHttpProxies/lb-http-proxy"
          },
          "dependencies": [
            "google_compute_backend_service.lb_backend",
            "google_compute_health_check.lb_health_check",
            "google_compute_instance_group_manager.lb_mig",
            "google_compute_instance_template.lb_template",
            "google_compute_target_http_proxy.lb_http_proxy",
            "google_compute_url_map.lb_url_map"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "lb_http_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-04-08T18:55:29.253-07:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/adaptive-load-balancer-2/global/targetHttpProxies/lb-http-proxy",
            "name": "lb-http-proxy",
            "project": "adaptive-load-balancer-2",
            "proxy_bind": false,
            "proxy_id": 4843621866203016574,
            "self_link": "https://www.googleapis.com/compute/v1/projects/adaptive-load-balancer-2/global/targetHttpProxies/lb-http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/adaptive-load-balancer-2/global/urlMaps/lb-url-map"
          },
          "dependencies": [
            "google_compute_backend_service.lb_backend",
            "google_compute_health_check.lb_health_check",
            "google_compute_instance_group_manager.lb_mig",
            "google_compute_instance_template.lb_template",
            "google_compute_url_map.lb_url_map"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "lb_url_map",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-04-08T18:55:17.282-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/adaptive-load-balancer-2/global/backendServices/lb-backend-service",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "KQvAVi4FLlI=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/adaptive-load-balancer-2/global/urlMaps/lb-url-map",
            "map_id": 9213338270511426922,
            "name": "lb-url-map",
            "path_matcher": [],
            "project": "adaptive-load-balancer-2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/adaptive-load-balancer-2/global/urlMaps/lb-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_backend_service.lb_backend",
            "google_compute_health_check.lb_health_check",
            "google_compute_instance_group_manager.lb_mig",
            "google_compute_instance_template.lb_template"
          ]
        }
      ]
    }
  ]
}